# wasm-vips

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  Dockerfile  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.sh  meson.build  meson_options.txt  package.json
.github/workflows/: ci.yml
lib/: vips.d.ts
playground/: README.md  decode-deflate.sh  decode-gcode.sh  encode-deflate.sh  encode-gcode.sh  package.json  webpack.config.js
playground/images/: INFO.md  owl.jxl  owl.tif
playground/samples/edge-detection/canny/: sample.js
playground/samples/edge-detection/sobel/: sample.js
playground/samples/filter/duotone/: sample.js
playground/samples/filter/emboss/: sample.js
playground/samples/filter/gaussian-blur/: sample.js
playground/samples/filter/modulate/: sample.js
playground/samples/filter/sepia/: sample.js
playground/samples/filter/sharpen/: sample.js
playground/samples/filter/tint/: sample.js
playground/samples/other/animated-image/: sample.html  sample.js
playground/samples/other/animated-webp/: sample.js
playground/samples/other/embed-multiply-convolution/: sample.js
playground/samples/other/histogram/: sample.html  sample.js
playground/samples/other/json-output/: sample.js
playground/samples/other/optional-output/: sample.html  sample.js
playground/samples/other/smartcrop/: sample.js
playground/samples/other/thumbnail-smartcrop-sepia/: sample.js
playground/samples/other/watermark/: sample.js
playground/src/: index.html  index.js  playground-runner.html  samples.js
playground/src/css/: playground.css
playground/src/images/: INFO.md  owl.avif
src/: CMakeLists.txt  fixed-threadpool-web.js  locatefile-cors-pre.js  meson.build  modules-node-pre.js  modules-post.js  modules-pre.js  modules-web-pre.js  vector-types.cpp  vector-types.js  vips-emscripten.cpp  vips-library.js  workaround-cors-pre.js
src/bindings/: connection.cpp  connection.h  error.cpp  error.h  image.cpp  image.h  init.h  interpolate.cpp  interpolate.h  object.h  option.cpp  option.h  utils.cpp  utils.h  vips-operators.cpp  vips-operators.h
src/closure-externs/: wasm-vips.js
test/bench/: README-simde.md  README.md  images.js  index.html  package.json  perf-jpeg-buffer-passthrough.js  perf.js  serve.json
test/bench/images/: index.js
test/unit/: helpers.js  helpers.mjs  index.html  node-helper.js  package.json  serve.json  test_arithmetic.js  test_arithmetic.mjs  test_auto_delete.js  test_block.js  test_colour.js  test_colour.mjs  test_connection.js  test_connection.mjs  test_conversion.js  test_conversion.mjs  test_convolution.js  test_convolution.mjs  test_create.js  test_create.mjs  test_draw.js  test_draw.mjs  test_foreign.js  test_foreign.mjs  test_histogram.js  test_histogram.mjs  test_iofuncs.js  test_iofuncs.mjs  test_morphology.js  test_morphology.mjs  test_mosaicing.js  test_mosaicing.mjs  test_resample.js  test_resample.mjs
test/unit/images/: sample.jxl  sample.vips
